fixing date layout issue on entry_ui

--- a/culturefeed_entry_ui/css/culturefeed_entry_ui.css
+++ b/culturefeed_entry_ui/css/culturefeed_entry_ui.css
@@ -160,6 +160,7 @@ input.add-more-link:hover {
 
 .when-datetimes .container-inline-date .date-padding {
   padding: 0;
+  float: none;
 }
 
 .when-datetimes input.add-more-link {
